added bus directory (data dir) to .gitignore & added node debug config

--- a/twetchBitBusConfig.json
+++ b/twetchBitBusConfig.json
@@ -7,6 +7,6 @@
       "out.s1": "19HxigV4QyBv3tHpQVcUEQyq1pzZVdoAut",
       "out.s22": "twetch"
     },
-    "project": { "out.s2": 1, "out.s3": 1 }
+    "project": { "out.s2": 1 }
   }
 }
