--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -5,67 +5,12 @@
   "configurations": [
       {
           "type": "node",
-          "request": "attach",
-          "name": "Attach by Process ID",
-          "processId": "${command:PickProcess}"
-      },
-      {
-          "type": "node",
-          "request": "attach",
-          "name": "Attach by Process ID",
-          "processId": "${command:PickProcess}"
-      },
-      {
-          "type": "node",
-          "request": "attach",
-          "name": "Attach",
-          "port": 9229
-      },
-      {
-          "name": "Launch Planaria",
-            "type": "node",
-            "request": "launch",
-            "program": "${workspaceFolder}/planarium/index.js",
-            "stopOnEntry": true,
-            "args": [],
-            "cwd": "${workspaceFolder}",
-            "preLaunchTask": null,
-            "runtimeExecutable": null,
-            "runtimeArgs": [
-                "--nolazy"
-            ],
-            "env": {
-                "NODE_ENV": "development"
-            },
-            "externalConsole": false,
-            "sourceMaps": false,
-            "outDir": null
-      },
-      {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/planaria/index.js",
-            "openDebug": "openOnDebugBreak",
-            "internalConsoleOptions": "openOnSessionStart"
-      },
-      {
-          "type": "node",
           "request": "launch",
-          "name": "Electron Main",
-          "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
-          "program": "${workspaceFolder}/planaria/index.js"
-      },
-      {
-          "type": "node",
-          "request": "launch",
-          "name": "Launch via NPM",
-          "runtimeExecutable": "npm",
-          "runtimeArgs": [
-              "run-script",
-              "debug"
-          ],
-          "port": 9229
+          "name": "Launch Program",
+          "program": "${workspaceFolder}/planaria/index",
+          "args": [
+              "start"
+          ]
       }
   ]
 }
